# Classification-CPP

./: .gitignore  CMakeLists.txt  README.md  TestClassification.cpp  conanfile.py  conanfile.txt
Attribute/: Attribute.h  BinaryAttribute.cpp  BinaryAttribute.h  ContinuousAttribute.cpp  ContinuousAttribute.h  DiscreteAttribute.cpp  DiscreteAttribute.h  DiscreteIndexedAttribute.cpp  DiscreteIndexedAttribute.h
Classifier/: AutoEncoder.cpp  AutoEncoder.h  Bagging.cpp  Bagging.h  C45.cpp  Classifier.cpp  Classifier.h  DeepNetwork.cpp  Dummy.cpp  Dummy.h  KMeans.cpp  KMeans.h  Knn.cpp  Knn.h  Lda.cpp  Lda.h  LinearPerceptron.cpp  LinearPerceptron.h  MultiLayerPerceptron.cpp  NaiveBayes.cpp  NaiveBayes.h  Qda.cpp  Qda.h  RandomClassifier.cpp  RandomClassifier.h  RandomForest.cpp  Svm.cpp
DataSet/: DataDefinition.cpp  DataDefinition.h  DataSet.cpp  DataSet.h
DistanceMetric/: DistanceMetric.h  EuclidianDistance.cpp  EuclidianDistance.h  MahalanobisDistance.cpp  MahalanobisDistance.h
Experiment/: BootstrapRun.cpp  BootstrapRun.h  Experiment.cpp  Experiment.h  KFoldRun.cpp  KFoldRunSeparateTest.cpp  KFoldRunSeparateTest.h  MxKFoldRun.h  MxKFoldRunSeparateTest.cpp  MxKFoldRunSeparateTest.h  SingleRun.h  SingleRunWithK.cpp  SingleRunWithK.h  StratifiedKFoldRun.cpp  StratifiedKFoldRun.h  StratifiedKFoldRunSeparateTest.cpp  StratifiedKFoldRunSeparateTest.h  StratifiedMxKFoldRun.cpp  StratifiedMxKFoldRun.h  StratifiedMxKFoldRunSeparateTest.cpp  StratifiedMxKFoldRunSeparateTest.h  StratifiedSingleRunWithK.cpp  StratifiedSingleRunWithK.h
FeatureSelection/: FeatureSubSet.cpp  (+5 more)
(+386 files in other folders)
